--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -6,13 +6,25 @@
     "divjoy"
   ],
   "dependencies": {
+    "@3id/connect": "^0.4.1",
+    "@ceramicnetwork/3id-did-resolver": "^2.1.2",
+    "@ceramicnetwork/http-client": "^2.2.1",
+    "@ceramicnetwork/stream-tile": "^2.2.2",
+    "@datamodels/identity-accounts-crypto": "^0.1.2",
+    "@datamodels/identity-accounts-web": "^0.1.2",
+    "@datamodels/identity-profile-basic": "^0.1.2",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@glazed/datamodel": "^0.1.2",
+    "@glazed/devtools": "^0.1.3",
+    "@glazed/did-datastore": "^0.1.4",
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.60",
     "@mui/icons-material": "^5.8.4",
+    "dids": "^3.2.0",
     "firebase": "9.1.0",
+    "key-did-provider-ed25519": "^2.0.0",
     "next": "12.0.2",
     "query-string": "6.13.8",
     "react": "17.0.2",
@@ -25,5 +37,8 @@
     "dev": "./node_modules/.bin/next dev",
     "build": "./node_modules/.bin/next build",
     "start": "./node_modules/.bin/next start"
+  },
+  "devDependencies": {
+    "@self.id/framework": "^0.3.2"
   }
 }
