--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,17 +2,13 @@
 # Please adjust to your needs (see https://www.gitpod.io/docs/config-gitpod-file)
 # and commit this file to your remote git repository to share the goodness with others.
 
-image:
-  file: .gitpod.dockerfile
-
 tasks:
-
   - name: backend
-    init: cd packages/backend && npm install
+    init: cd /packages/backend && npm install
     command: cd packages/backend && npm start
 
   - name: frontend
-    init: cd packages/frontend && npm install
+    init: cd /packages/frontend && npm install
     command: cd packages/frontend && npm run dev
     openMode: split-right
 
