added concurrent so we can build and start the entire project in the root

--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "dependencies": {
-    "bitgo": "^14.1.2",
-    "fireblocks-sdk": "^2.3.1"
+    "concurrently": "^7.2.2"
+  },
+  "scripts": {
+    "backend:build": "cd packages/backend; npm install",
+    "frontend:build": "cd packages/frontend; npm install",
+    "backend:start": "cd packages/backend; npm start",
+    "frontend:start": "cd packages/frontend; npm run dev",
+    "start": "concurrently \"npm run backend:start\" \"npm run frontend:start\"",
+    "build": "concurrently \"npm run frontend:build\" \"npm run backend:build\""
   }
 }
