--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,6 +35,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "6.15.1",
+    "react-player": "^2.10.1",
     "react-query": "3.32.1",
     "use-local-storage-state": "9.0.2"
   },
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@mui/material": "^5.8.6",
-    "@self.id/framework": "^0.3.2"
+    "@self.id/framework": "^0.3.2",
+    "prop-types": "^15.8.1"
   }
 }
