--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ yarn-error.log*
 /packages/backend/dist/
 /packages/backend/certs/
 /packages/backend/dist/*
+fireblocks.csr
+fireblocks_secret.key
+package-lock.json
