--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -27,6 +27,7 @@
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.60",
     "@mui/icons-material": "^5.8.4",
+    "date-fns": "^2.29.1",
     "dids": "^3.2.0",
     "firebase": "9.1.0",
     "key-did-provider-ed25519": "^2.0.0",
